--- a/source/_posts/2019-12-20-blog1.md
+++ b/source/_posts/2019-12-20-blog1.md
@@ -1,6 +1,7 @@
 ---
 layout: blog
 title: blog1
+lang: en
 date: '2019-12-20T18:05:21+05:30'
 thumbnail: /images/uploads/wolf-mandala.jpg
 rating: '2'
